--- a/WebApplication1/WebApplication1/Views/Event/CreateEvent.cshtml
+++ b/WebApplication1/WebApplication1/Views/Event/CreateEvent.cshtml
@@ -4,8 +4,8 @@
     ViewBag.Title = "Create Event";
 }
 
-@using (Html.BeginForm("FileUpload", "Event", FormMethod.Post, new { enctype = "multipart/form-data" }))
-    {
+@using (Html.BeginForm("FileUpload", "Event", FormMethod.Post, new { enctype = "multipart/form-data", onsubmit = "return validateForm()" }))
+{
     <hr />
     <h2 style="margin-top:50px; margin-left:10px">Create your own event!</h2>
 
@@ -26,9 +26,9 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(m => m.TagName, htmlAttributes: new { @class = "control-label col-md-2"})
+            @Html.LabelFor(m => m.TagName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(m => m.TagName, new { htmlAttributes = new { @class = "form-control", @id= "Tags", @style="width:30%"} })
+                @Html.EditorFor(m => m.TagName, new { htmlAttributes = new { @class = "form-control", @id = "Tags", @style = "width:30%" } })
                 @Html.ValidationMessageFor(m => m.TagName, "", new { @class = "text-danger" })
                 <script>
                     $(function () {
@@ -51,23 +51,23 @@
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.EventBeginDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div  class="col-md-10">
                 @Html.EditorFor(m => m.EventBeginDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(m => m.EventBeginDate, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(m => m.EventBeginDate, "", new { @class = "text-danger error-msg", id = "errorBeginDate" })
             </div>
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.EventBeginTime, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(m => m.EventBeginTime, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(m => m.EventBeginTime, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(m => m.EventBeginTime, "", new { @class = "text-danger error-msg", id="errorBeginTime" })
             </div>
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.EventEndDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div  class="col-md-10">
                 @Html.EditorFor(m => m.EventEndDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(m => m.EventEndDate, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(m => m.EventEndDate, "", new { @class = "text-danger error-msg", id="errorEndDate" })
             </div>
         </div>
 
@@ -75,7 +75,8 @@
             @Html.LabelFor(m => m.EventEndTime, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(m => m.EventEndTime, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(m => m.EventEndTime, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(m => m.EventEndTime, "", new { @class = "text-danger error-msg", id="errorEndTime" })
+                
             </div>
         </div>
         <div class="form-group">
@@ -89,7 +90,7 @@
         <div class="form-group">
             @Html.LabelFor(m => m.EventPrice, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(m => m.EventPrice, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(m => m.EventPrice, new { htmlAttributes = new { @class = "form-control", min = "0" } })
                 @Html.ValidationMessageFor(m => m.EventPrice, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -111,6 +112,7 @@
     </div>
 }
 <script type="text/javascript">
+
     var input = document.getElementById('Location');
 
     google.maps.event.addDomListener(input, 'keydown', function (e) {
@@ -120,6 +122,116 @@
     });
     google.maps.event.addDomListener(window, 'load', function () {
         var places = new google.maps.places.Autocomplete(input);
-    })
+    });
 
+
+    function validateForm() {
+
+        
+        now = new Date();
+        var startDateElement = document.getElementById("EventBeginDate");
+        var startDate = new Date(startDateElement.value);
+        console.log(startDate.getFullYear());
+
+        var endDateElement = document.getElementById("EventEndDate");
+        console.log(endDateElement.value);
+        var endDate = new Date(endDateElement.value);
+
+        if (startDate.getFullYear() < now.getFullYear() || startDate.getMonth() < now.getMonth() || startDate.getDate() < now.getDate()) {
+
+            var error = document.getElementById("errorBeginDate");
+            error.innerHTML = "Wrong begin date";
+            return false;
+        }
+     
+        if (endDate.getFullYear() < startDate.getFullYear()) {
+
+            var error = document.getElementById("errorEndDate");
+            error.innerHTML = "Wrong end date";
+            return false;
+        }
+
+        if (endDate.getFullYear() != startDate.getFullYear()) {
+            
+
+            return false;
+        }
+
+        //Dit geval is het geval wnr de event begin en eindig op dezelfde jaar men moet dus verschil zoeken 
+        //in maand en dag
+        if (endDate.getMonth() < startDate.getMonth()) {
+            var error = document.getElementById("errorEndDate");
+            error.innerHTML = "Wrong end date";
+            return false;
+        }
+
+        if (endDate.getMonth() > startDate.getMonth()) {
+          
+            var elements = document.getElementsByClassName("error-msg");
+            for (i = 0; i < elements.length; i++) {
+                var error = elements[i];
+                error.innerHTML = "";
+
+            }
+            return true;
+        }
+
+        if (endDate.getDate() < startDate.getDate()) {
+
+            var error = document.getElementById("errorEndDate");
+            error.innerHTML = "Wrong end date";
+            return false;
+        }
+
+        if (endDate.getDate() > startDate.getDate()) {
+
+            
+            var elements = document.getElementsByClassName("error-msg");
+            for (i = 0; i < elements.length; i++) {
+                var error = elements[i];
+                error.innerHTML = "";
+                
+            }
+            return true;
+        }
+
+        var beginTimeElement = document.getElementById("EventBeginTime");
+        var endTimeElement = document.getElementById("EventEndTime");
+        var beginTime = beginTimeElement.value;
+        var endTime = endTimeElement.value;
+
+        var hourBegin = beginTime.substring(0, 2);
+        var hourEnd = endTime.substring(0, 2);
+
+        if (parseInt(hourEnd) < parseInt(hourBegin)) {
+
+            var error = document.getElementById("errorEndTime");
+            error.innerHTML = "Wrong time";
+            return false;
+        }
+
+        if (parseInt(hourEnd) > parseInt(hourBegin)) {
+            var elements = document.getElementsByClassName("error-msg");
+            for (i = 0; i < elements.length; i++) {
+                var error = elements[i];
+                error.innerHTML = "";
+
+            }
+            return true;
+        }
+
+        var minBegin = beginTime.substring(3,5);
+        var minEnd = endTime.substring(3,5);
+       
+        if (parseInt(minEnd) < parseInt(minBegin)) {
+            var error = document.getElementById("errorEndTime");
+            error.innerHTML = "Wrong time";
+            return false;
+        }
+
+   
+        return true;
+    };
+
+   
 </script>
