--- a/WebApplication1/WebApplication1/Views/Event/EventDetails.cshtml
+++ b/WebApplication1/WebApplication1/Views/Event/EventDetails.cshtml
@@ -14,48 +14,48 @@
     @Scripts.Render("~/bundles/jqueryval")
     @Styles.Render("~/Content/bootstrapcss")    }
     <link rel="stylesheet" type="text/css" href="css/jquery.jdigiclock.css" />
-    <script type="text/javascript" src="lib/jquery-1.3.2.min.js"></script>
-    <script type="text/javascript" src="lib/jquery.jdigiclock.js"></script>
 </head>
 <body>
     <div class="container" style="width:90%; margin-top:40px">
         <div class="center-block">
             <div class="panel">
                 <div class="panel-heading text-center">
-                    <div id="pic">
+                    <div class="col-md-12" id="pic" style="width:100%">
                         @*scale pic*@
                         @Model.cloudinary.Api.UrlImgUp.Transform(
                         new Transformation()
-                        .Width(900)
                         .Height(300)
                         .Crop("fill")).BuildImageTag(Model.ev.EventPicture)
                     </div>
                     <div id="countdown" style="margin-top:20px; font-size:40px"></div>
+                    <hr />
                     <script type="text/javascript">
                         $('#countdown').countdown(Model.ev.EventBeginDate.ToString("yyyy-dd-MM"), function (event) {
                             $(this).html(event.strftime('<span>%w weeks %d days %H:%M:%S</span>'));
                         });
                     </script>
                 </div>
-                <hr />
-                <div class="panel-body text-center" style="padding-top:0">
-                    <div class="panel-title">
-                        <h2 style="margin-top:-5px">@Html.DisplayFor(model => model.ev.EventName)</h2>
-                        @*Organisator + link to profile*@
+                <div class="panel-body text-center" style="padding-top:10px">
+                    <div class="panel-info">
+                        <h2 style="margin-top:5px">@Html.DisplayFor(model => model.ev.EventName)</h2>
+                        <h3 style="margin-top:5px">@ViewBag.user</h3>
                         @foreach (var item in Model.tags)
                         {
                         <button id=@string.Format("t{0}", item.TagId) style="margin-bottom:5px" type="button" class="btn btn-info btn-xs">@item.TagName</button>
                         <script>
                             $('#@string.Format("t{0}", item.TagId)').click(function () {
                                 document.getElementById("name").value = "@item.TagName";
-                                //zoekt nog niet direct
+                                if (!$('#content').hasClass("hidden")) {
+                                    $('#content').removeClass("visible").addClass("hidden");
+                                    $('#viewPlaceHolder2').removeClass("hidden").addClass("visible");
+                                }
                                 jQuery.ajax({
                                     type: "GET",
                                     url: "/Home/GetView",
                                     data: { id: $("#City").val(), name: $("#name").val(), start: $('#reportrange').data('daterangepicker').startDate.format('YYYY-MM-DD'), end: $('#reportrange').data('daterangepicker').endDate.format('YYYY-MM-DD') },
                                     contentType: 'application/json; charset=utf-8',
                                     success: function (viewHTML) {
-                                        $("#viewPlaceHolder").html(viewHTML);
+                                        $("#viewPlaceHolder2").html(viewHTML);
                                     },
                                     error: function (req, status, error) {
                                         alert(req.responseText);
@@ -63,6 +63,9 @@
                                 });
                             }
                             )
+
+
+
                         </script>
                         }
                     </div>
@@ -73,9 +76,8 @@
                                 <p>Participants: @Html.DisplayFor(model => model.ev.EventParticipants)</p>
                                 <div id="klok"></div>
                             </div>
-                            @*EventsIntresteds toevoegen aan database*@
                             <div class="col-xs-6 text-left">
-                                <p>Intrested: @Html.DisplayFor(model => model.ev.EventParticipants)</p>
+                                <p>Intrested: @ViewBag.interestedCount</p>
                             </div>
                         </div>
                     </div>
@@ -105,7 +107,6 @@
                             </div>
                         </div>
                     </div>
-
                     <hr />
                     <div class="panel-body">
                         <h4><a data-toggle="collapse" href="#coll">description</a></h4>
@@ -205,11 +206,8 @@
     </script>
 
     <div class="card-footer text-muted text-xs-center">
-        @Html.ActionLink("Edit", "EditEvent", new { id = Model.ev.EventId }) |
+        @if (ViewBag.isowner) { @Html.ActionLink("Edit", "EditEvent", new { id = Model.ev.EventId }); }  |
         @Html.ActionLink("Home", "../")
     </div>
-
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
 </body>
 </html>
